Compact paragraphs for comments
Displays username, task status and hours without breaking the paragraph.
Up to 30% more compact for the same information.
Catch: .actions_menu should be floated inside .body for it to be inline

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -131,15 +131,6 @@ div.thread
   .block
     width: 560px
     float: right
-    .name
-      font-size: 12px
-      margin-bottom: 2px
-      a
-        font-size: 12px
-        font-weight: bold
-      span.arr
-        color: rgb(160, 160, 160)
-        padding: 0px 4px
     .date
       float: right
       font-size: 10px
@@ -147,6 +138,11 @@ div.thread
     .body
       margin-top: 5px
       max-height: 350px
+      a.user
+        text-decoration: none
+        font-weight: bold
+      p
+        margin-bottom: 2px
   .mention
     padding: 0 3px
     background-color: #eee
