--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -288,6 +288,7 @@ span.task_status, span.current_task_status
   -moz-border-radius: 4px
   -webkit-border-radius: 4px
   display: inline-block
+  line-height: 14px
 .task_status_new
   background: #9da3a7
   +gradient(#9da3a7,#9da3a7-#333)
