--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -136,12 +136,12 @@ div.thread
       font-size: 10px
       color: #9da3a7
     .body
-      margin-top: 5px
       max-height: 350px
       a.user
         text-decoration: none
         font-weight: bold
       p
+        margin-top: 0
         margin-bottom: 2px
   .mention
     padding: 0 3px
