--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -20,7 +20,7 @@
         = link_to thread, thread_link, :class => thread.class.to_s.downcase
         - if thread.is_a?(Task)
           = t('.on_task_list')
-          = link_to thread.task_list, [thread.task_list.project, thread.task_list], :class => 'task_list'
+          = link_to thread.task_list, [thread.task_list.project, thread.task_list], :class => :task_list
 
   .comments
     = render 'activities/thread_comments', :comments => comments, :thread => thread
