--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -23,10 +23,7 @@
             - else
               %span= t('.cannot_edit')
             - if can?(:destroy, comment)
-              - if comment.target.is_a? Project # legacy comments targeting a Project
-                = link_to t('common.delete'), [comment.project, comment], :'data-method' => 'delete',
-                    :'data-confirm' => t('.confirm_delete'), :'data-remote' => true
-              - else
+              - unless comment.target.is_a? Project # legacy comments targeting a Project
                 = link_to t('common.delete'), [comment.project, comment.target, comment], :'data-method' => 'delete',
                     :'data-confirm' => t('.confirm_delete'), :'data-remote' => true
       .body.textilized
