--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -23,7 +23,7 @@
             - else
               %span= t('.cannot_edit')
             - if can?(:destroy, comment)
-              - unless comment.target.is_a? Project # legacy comments targeting a Project
+              - unless comment.target.is_a?(Project) or comment.target.is_a?(TaskList) # legacy comments targeting a Project or a TaskList
                 = link_to t('common.delete'), [comment.project, comment.target, comment], :'data-method' => 'delete',
                     :'data-confirm' => t('.confirm_delete'), :'data-remote' => true
       .body.textilized
