Thread caching (read comments)
There's a map on cache that stores which thread activities belong to
Threads differentiate by:
- Short and full threads. Short are used on the overview
- Locales
- The reply form now uses css to display the current user avatar

--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -2,7 +2,7 @@
 - task_form = nil unless local_assigns[:task_form]
 
 .field.text_area
-  = micro_avatar current_user
+  %a.micro_avatar.my_avatar{ :href => '#' }
   = f.text_area :body, :placeholder => local_assigns[:placeholder], :id => nil
 
 - autocomplete_from_project(project)
