--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,6 +16,7 @@
       = yield :js_templates
   %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env}", :reload_url => reload_url}
     = javascript_include_tag 'modernizr', '/i18n/environment'
+    = load_javascript_user_data
     = archived_project_strip(@current_project)
     = configure_this_organization
     .container
