Moving permissions to edit/delete comments to client-side JS
This is a requisite for better caching, making comments' html depend on fewer parameters

--- a/app/views/activities/_thread_comments.haml
+++ b/app/views/activities/_thread_comments.haml
@@ -2,11 +2,12 @@
 
 - case controller.controller_name
 - when "projects"
-  - if comments.size > 2
+  - show_comments = 3
+  - if comments.size > show_comments
     %span.more_comments
-      = link_to t('activities.thread.more_comments', :count => comments.size - 2),
+      = link_to t('activities.thread.more_comments', :count => comments.size - show_comments),
         show_thread_path(thread, :thread_type => thread.class.to_s),
         :'data-remote' => true
-  = render comments[0..1].reverse, :threaded => true
+  = render comments[0..(show_comments-1)].reverse, :threaded => true
 - else
   = render comments.reverse, :threaded => true
