--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,8 +1,9 @@
 - threaded = false unless local_assigns[:threaded]
 - simpleconv = false unless local_assigns[:simpleconv]
 
-- cache_editable_comment(comment, threaded, simpleconv) do
-  %div[comment]{ :'data-editable-before' => datetime_ms(15.minutes.since(comment.created_at)) }
+- cache_comment(comment, threaded, simpleconv) do
+  %div[comment]{ :'data-editable-before' => datetime_ms(15.minutes.since(comment.created_at)),
+                  :'data-user' => comment.user.id, :'data-project' => comment.project.id }
     .info
       - if threaded
         = micro_avatar(comment.user)
@@ -17,15 +18,11 @@
             - case comment.target
             - when Conversation
               = link_to t('comments.actions.conversation_url'), project_conversation_path(comment.project, comment.target)
-            - if can?(:update, comment)
-              = link_to t('comments.actions.edit'), [:edit, comment.project, comment.target, comment],
-                  :rel => 'facebox', :'data-uneditable-message' => t('.cannot_edit')
-            - else
-              %span= t('.cannot_edit')
-            - if can?(:destroy, comment)
-              - unless comment.target.is_a?(Project) or comment.target.is_a?(TaskList) # legacy comments targeting a Project or a TaskList
-                = link_to t('common.delete'), [comment.project, comment.target, comment], :'data-method' => 'delete',
-                    :'data-confirm' => t('.confirm_delete'), :'data-remote' => true
+            = link_to t('comments.actions.edit'), [:edit, comment.project, comment.target, comment],
+                :rel => 'facebox', :'data-uneditable-message' => t('.cannot_edit'), :class => :edit
+            - unless comment.target.is_a?(Project) or comment.target.is_a?(TaskList) # legacy comments targeting a Project or a TaskList
+              = link_to t('common.delete'), [comment.project, comment.target, comment], :'data-method' => 'delete',
+                  :'data-confirm' => t('.confirm_delete'), :'data-remote' => true, :class => :delete
       .body.textilized
         .before
           = link_to(comment.user.name, comment.user, :class => :user) + " "
