--- a/app/views/projects/fields/_new.html.haml
+++ b/app/views/projects/fields/_new.html.haml
@@ -4,17 +4,16 @@
   = errors_for project, :name
 
 .organization.text_field
-  - case current_user.organizations.size
-  - when 0
-    = f.label :organization_id, t('.choose_organization.new_org_name')
-    = f.text_field :organization_name, :placeholder => t('organizations.fields.name_placeholder')
-    - if @organization
-      = errors_for(@organization, :name) || errors_for(@organization, :permalink)
+  - if current_user.organizations.empty?
+    - f.fields_for :organization do |org_fields|
+      = org_fields.label :name, t('.choose_organization.new_org_name')
+      = org_fields.text_field :name, :placeholder => t('organizations.fields.name_placeholder')
+      = errors_for(project.organization, :name) || errors_for(project.organization, :permalink)
   - else
     - if Teambox.config.community # single organization
       = f.hidden_field :organization_id, :value => current_user.organizations.first.id
     - else
-      = f.label :organization_name, t('.choose_organization.choose_org')
+      = f.label :organization_id, t('.choose_organization.choose_org')
       = f.select :organization_id, options_for_organizations(current_user.organizations)
       %p.inline= t('.choose_organization.or_create_a_new_org', :link => new_organization_path)
       = errors_for project, :organization_id
