--- a/app/styles/sites.sass
+++ b/app/styles/sites.sass
@@ -14,4 +14,6 @@
     color: rgb(50,50,0)
     -moz-border-radius: 4px
     -webkit-border-radius: 4px
+  form
+    margin-top: 60px
   .signup_or_forgot_links
