--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -1,4 +1,4 @@
-- project = f.object.project || f.object.target.try(:project)
+- project = local_assigns[:project] || f.object.project || f.object.target.try(:project)
 - task_form = nil unless local_assigns[:task_form]
 
 .field.text_area
