commenting: disable the submit button while posting

--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -37,4 +37,4 @@
   .submit
     %span.help= formatting_documentation_link
     %button.preview{ :data => {:alternate => t('comments.preview.close')} }= t('comments.preview.preview')
-    = f.submit t('comments.new.submit')
+    = f.submit t('comments.new.submit'), :'data-disable-with' => t('comments.new.sending')
