--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -341,12 +341,16 @@ div.task_list, div.task_list_closed
     .project, .project_arr
       display: none
 
-.new_sessions
+.new_sessions, .create_sessions
   padding-left: 10px
   background-color: white
   a, a:hover
     color: rgb(150, 150, 150)
     text-decoration: none
+  p.error
+    background: #FF8D98
+    padding: 5px
+    display: inline-block
 
 .new_conversations, .create_conversations
   .watchers
