Proper margin for textilized blockquotes

--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -62,14 +62,13 @@ textarea.placeholder, input.placeholder
       font-size: 12px
   p
     line-height: 18px
-    margin: 2px 0 10px
+    margin: 2px 0 8px
   a
     text-decoration: underline
   blockquote
     color: rgb(140, 140, 140)
     border-left: 3px solid #cccccc
-    margin: 0
-      left: 5px
+    margin: 8px 0 8px 5px
     padding: 0
       left: 10px
   pre
