Abbreviate threads that are displayed through the show_more link

--- a/app/views/activities/_thread_comments.haml
+++ b/app/views/activities/_thread_comments.haml
@@ -1,7 +1,7 @@
 - thread_id = "#{thread.class.to_s}_#{thread.id}"
 
 - case controller.controller_name
-- when "projects"
+- when "projects", "activities"
   - show_comments = 3
   - if comments.size > show_comments
     %span.more_comments
