Adding "Attach" text to comment's extras

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -47,6 +47,9 @@ form.new_comment, form.edit_comment
   .actions
     width: 55%
     float: left
+    span
+      font-size: 12px
+      margin-right: 5px
     .add_hours_icon, .attach_icon
       text-indent: -9999em
       margin-right: 5px
@@ -65,7 +68,7 @@ form.new_comment, form.edit_comment
       select[name="task[status]"]
         width: 80px
       select[name="task[assigned_id]"]
-        width: 150px
+        width: 130px
   .submit
     width: 45% !important
     float: right
