--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -9,7 +9,7 @@
     - form_for @new_conversation, :html => { :multipart => true, :class => 'new_conversation new_comment', :'data-remote' => true } do |form|
       .project_select
         = label_tag :project_id, t('comments.new.comment_on_project')
-        = select_tag :project_id, options_from_collection_for_select(commentable_projects, :id, :name)
+        = select_tag :project_id, options_for_projects_by_organization(commentable_projects)
       
       = form.hidden_field :simple
       
