Adding "my tasks" to Project#index sidebar

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -313,3 +313,17 @@ span.task_status, span.current_task_status
 p.view_for_all
   font-size: 12px
   margin: 10px 0
+
+.my_tasks_listing
+  .task
+    display: block
+    margin: 6px 0
+    span.task_status
+      padding: 1px 2px
+      width: 14px
+      text-align: center
+    a
+      line-height: 17px
+    img.loading
+      padding: 0px 10px 1px 1px
+      float: left
