Site-wide task timer feature (desktop only)

--- a/app/styles/_stopwatch.sass
+++ b/app/styles/_stopwatch.sass
@@ -8,10 +8,11 @@
   border-top: 0px
   padding: 3px
   padding-bottom: 5px
-  
+  background-color: white
+
   label
     font-style: italic
-  
+
   .timer
     font-size: 12px
     font-weight: bold
