Cleaner notes on Pages

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -116,8 +116,10 @@
       bottom: 5px
   .note
     h3
-      border-bottom: 2px solid #eee
-      margin-bottom: 10px
+      border: none
+      margin:
+        top: 10px
+        bottom: 10px
   p
     font-size: 12px
     line-height: 1.4em
