Using icon for text styles on the comment form

--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -36,3 +36,5 @@
   +hoverable_sprite_16px(16px*4, 0px, 16px, 16px)
 .page_icon
   +hoverable_sprite_16px(16px*6, 0px, 16px, 16px)
+.style_icon
+  +hoverable_sprite_16px(16px*10, 0px, 16px, 16px)
