--- a/app/views/notes/_new.haml
+++ b/app/views/notes/_new.haml
@@ -2,7 +2,7 @@
   = page_slot_fields
   = note_fields(f)
   .submit{ :id => "note_submit" }
-    = f.submit t('.submit')
+    = f.submit t('.submit'), :'data-disable-with' => t('pages.new.sending')
     or
     = link_to t('common.cancel'), '#', :class => 'cancelPageWidget'
   =loading('note_form')
