fix calendar-i18n where rails was given unparsable localized string, date picker now use hidden field in ISO format and show localized string as simple span

--- a/app/styles/_calendar_date_select.sass
+++ b/app/styles/_calendar_date_select.sass
@@ -100,12 +100,11 @@
     margin: 10px 0 7px 0
   .date_picker
     display: block
-    input
-      border: 0
-      background: transparent
+    padding-bottom: 5px
+    span
       font-size: 12px
     img
-      float: left
+      margin-right: 2px
 
 .fieldWithErrors .calendar_date_select
   border: 2px solid red
