Wrap the example #indexes in the apidocs. Also include the api include[] API.

--- a/app/styles/apidocs.sass
+++ b/app/styles/apidocs.sass
@@ -188,7 +188,7 @@ div.route
       li
         margin: 3px
         list-style-type: none
-  .status
+  .docfield
     span.title
       font-weight: bold
 ul.table
