--- a/app/views/emailer/_tasks_for_daily_reminder.text.html.haml
+++ b/app/views/emailer/_tasks_for_daily_reminder.text.html.haml
@@ -5,10 +5,10 @@
     - tasks.each do |task|
       %tr
         %td{ :style => "width:30px"}
-          %span{ :style => task_status_style(task) }= task.comments_count.to_s
-        %td{ :style => "width:600px"}
+          %span{ :style => task_status_style(task) }= task.comments_count
+        %td{ :style => "width:650px"}
           - if task.due_on
             %span{ :style => task_due_on_style(task) }
-              = due_on(task) if task.due_on
+              = due_on(task)
           = link_to h(task.name), project_task_list_task_url(task.project, task.task_list, task)
           == [#{link_to h(task.project), task.project}]
