--- a/app/views/emailer/project_invitation.text.html.haml
+++ b/app/views/emailer/project_invitation.text.html.haml
@@ -1,16 +1,13 @@
 .email{ :style => email_global }
-  %p{ :style => email_text(:small) }
-    = t('emailer.common.do_not_answer')
 
-  %p= t('emailer.invitation.teambox_is_a_pm_platform')
-  %p= t('emailer.invitation.plan_share_and_collaborate')
+  = dont_answer
 
   .box{ :style => email_box }
     %p= t('emailer.invitation.collaborate_with', :name => h(@referral.name))
     %p{ :style => email_text(:big) }
       = t('emailer.invitation.you_have_been_invited_to', :project => h(@project.name))
     %h2{ :style => email_text(:big) }
-      = link_to t('emailer.invitation.accept_the_invitation'), new_user_url(:invitation => @invitation.token)
+      = link_to t('emailer.invitation.accept_the_invitation'), projects_url(:invitation => @invitation.token)
     %p
       %strong
         = t('emailer.invitation.current_users')
@@ -19,7 +16,8 @@
   %p{ :style => email_text(:small) }
     = t('emailer.invitation.plaintext_link')
     %br
-    = link_to new_user_url(:invitation => @invitation.token), new_user_url(:invitation => @invitation.token)
+    = link_to projects_url(:invitation => @invitation.token), projects_url(:invitation => @invitation.token)
 
   .footer{ :style => email_text(:small) }
-    %p= t('emailer.invitation.report_abuse')
+    %p
+      = t('emailer.invitation.report_abuse')
