Limiting width for the People#index dropdown for projects

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -186,6 +186,9 @@ $micro_size: 24px
           width: 600px
       select
         max-width: 600px
+  .column
+    select
+      max-width: 280px
   .people
     .person
       +clearing
