AJAX loading for tasks in Projects#index

--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -38,3 +38,9 @@
   +hoverable_sprite_16px(16px*6, 0px, 16px, 16px)
 .style_icon
   +hoverable_sprite_16px(16px*10, 0px, 16px, 16px)
+.left_arrow_icon
+  +hoverable_sprite_16px(16px*11, -3px, 16px, 16px)
+.loading_icon
+  display: inline-block
+  +sprite("/images/loading.gif", 0, 0, 16px, 16px)
+  
