--- a/app/views/tasks/_my_tasks_listing.haml
+++ b/app/views/tasks/_my_tasks_listing.haml
@@ -1,5 +1,6 @@
 - tasks = current_user.pending_tasks
 - if tasks.any?
+  = link_to t('.back'), "/", :id => :back_to_overview, :style => 'display: none'
   .my_tasks_listing
     %h2= t('.tasks')
     - for task in tasks
