Warning users to use latest IE

--- a/app/views/shared/_upgrade_browser.haml
+++ b/app/views/shared/_upgrade_browser.haml
@@ -1,7 +1,7 @@
-/[if lte IE 6]
+/[if lte IE 7]
   %div{ :style => "border:3px solid #090; margin:8px 0; background:#cfc; color:#000; width:345px; padding: 5px" }
     = t('.upgrade')
-    = link_to t('.ie'), "http://www.microsoft.com/windows/Internet-explorer/beta/default.aspx"
+    = link_to t('.ie'), "http://www.microsoft.com/windows/Internet-explorer"
     = t('.or_install')
     = link_to t('.chrome'), "http://google.com/chrome"
     = link_to t('.firefox'), "http://getfirefox.com"
