Proper spacing for paragraphs in comments

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -145,6 +145,8 @@ div.thread
         font-weight: bold
       .before:first-child+p
         display: inline
+      p
+        margin: 8px 0
   .mention
     padding: 0 3px
     background-color: #eee
