Add a list of the projects that you share with a given user to that user's user#show page

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -33,6 +33,9 @@ $micro_size: 24px
   .activity
     .micro_avatar
       display: none
+  #common_projects
+    .project_link
+      margin-bottom: 5px
 
 .unconfirmed_email_users
   .content
