--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -15,7 +15,7 @@
 
   - form_for @user, :url => secure_url do |f|
     = render 'users/form/new', :f => f, :user => f.object
-    - if Rails.env.development?
+    - if Rails.env.development? and Teambox.config.email_confirmation_require
       %p You are running in development mode. No email confirmation will be required.
       %p When running Teambox in production mode, signup will require an email confirmation.
     %br
