add google chrome frame notification to login and add the header whenever chrome frame is seen in the user agent

--- a/app/views/sites/show.haml
+++ b/app/views/sites/show.haml
@@ -9,6 +9,7 @@
     = upgrade_browser
     = render 'sites/fields'
     = submit_tag t('.submit')
+    = chrome_frame
 
   .signup_or_forgot_links
     %p= link_to t('sessions.fields.forgot'), forgot_password_path, :tabindex => 203
