--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -3,7 +3,7 @@
 
 .field.text_area
   %a.micro_avatar.my_avatar{ :href => '#' }
-  = f.text_area :body, :placeholder => local_assigns[:placeholder], :id => nil
+  = f.text_area :body, :placeholder => local_assigns[:placeholder], :id => nil, :style => request.xhr? ? 'max-height: 300px' : nil
 
 - autocomplete_from_project(project)
 
