--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -13,7 +13,7 @@
   
 #activities
   = list_threads(@threads)
-  = show_more_button(@activities)
+  = show_more_button
 
 =# javascript_tag autorefresh(@activities, @current_project)
 
