--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -48,7 +48,7 @@ textarea.placeholder, input.placeholder
 
 .textilized
   font-size: 12px
-  color: rgb(60, 60, 60)
+  color: #010101
   h1, h2
     font-size: 16px
     border-bottom: 0
