Basic CSV export on the time tracking page

--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -20,6 +20,8 @@
   +sprite_16px(16px*15, 16px*5)
 =leave_icon
   +sprite_16px(16px*15, 16px*6)
+=csv_icon
+  +sprite_16px(16px*15, 16px*7)
 
 .trash_icon
   +hoverable_sprite_16px(16px*0, 0px, 16px, 16px)
