--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -93,7 +93,7 @@
     margin: 15px 0
     display: block
 
-  a.gantt_link, a.calendars_link, a.print_link, a.email_link, a.subscribe, a.public_link, a.leave_link
+  a.gantt_link, a.calendars_link, a.print_link, a.email_link, a.subscribe, a.public_link, a.leave_link, a.csv_link
     display: block
     margin-top: 5px
     font-size: 13px
@@ -103,6 +103,8 @@
     +gantt_icon
   a.calendars_link
     +calendar_icon
+  a.csv_link
+    +csv_icon
   a.print_link
     +print_icon
   a.email_link
