--- a/app/views/users/form/_linked_accounts.haml
+++ b/app/views/users/form/_linked_accounts.haml
@@ -1,8 +1,9 @@
-- Teambox.config.providers.each do |provider|
-  %p{:id => provider[:provider].downcase}
-    - if current_user.app_links.find_by_provider(provider[:provider])
-      = t(:'oauth.your_account_is_linked', :provider => provider[:provider].titleize)
-      = link_to t(:'oauth.unlink_account'), unlink_app_path(provider[:provider])
-    - else
-      = t(:'oauth.your_account_is_not_linked', :provider => provider[:provider].titleize)
-      = link_to t(:'oauth.link_account'), "https://teambox.com/auth/#{provider[:provider]}"
+- if Teambox.config.providers and !Teambox.config.providers.empty?
+  - Teambox.config.providers.each do |provider|
+    %p{:id => provider[:provider].downcase}
+      - if current_user.app_links.find_by_provider(provider[:provider])
+        = t(:'oauth.your_account_is_linked', :provider => provider[:provider].titleize)
+        = link_to t(:'oauth.unlink_account'), unlink_app_path(provider[:provider])
+      - else
+        = t(:'oauth.your_account_is_not_linked', :provider => provider[:provider].titleize)
+        = link_to t(:'oauth.link_account'), "https://teambox.com/auth/#{provider[:provider]}"
