Commenters shouldn't be able to reorder pages

--- a/app/views/pages/_column.haml
+++ b/app/views/pages/_column.haml
@@ -1,12 +1,15 @@
 - content_for :column do
-  - if project
-    - if project.editable?(current_user)
-      = new_page_link(project)
-    - else
-      %p= t('.cant_create')
-  #column_pages.pages{:reorder_url => resort_project_pages_path(@current_project)}
-    %h2
-      = t('.all_pages')
-      %a#page_reorder{:href => '#'}= t('.reorder')
-      %a#page_reorder_done{:href => '#', :style => 'display:none'}= t('.reorder_done')
-    = list_pages(pages,current_target)
+
+  - if project.editable?(current_user)
+    = new_page_link(project)
+  - else
+    %p= t('.cant_create')
+
+  - if pages.any?
+    #column_pages.pages{:reorder_url => resort_project_pages_path(@current_project)}
+      %h2
+        = t('.all_pages')
+        - if project.editable?(current_user)
+          %a#page_reorder{:href => '#'}= t('.reorder')
+          %a#page_reorder_done{:href => '#', :style => 'display:none'}= t('.reorder_done')
+      = list_pages(pages,current_target)
