--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -32,15 +32,22 @@
     font-size: 1.1em
     padding-bottom: 0
     border-bottom: none
-    margin: 1em 0 .1em 6px
+    margin: 1em 0 1em 6px
     color: lighten($text, 30%)
     
   #results
-    .comment
-      .block
-        width: 880px
-    .highlight
-      background-color: yellow
+    .result
+      font-size: 14px
+      margin: 5px 0
+      span.time
+        float: right
+        font-size: 12px
+        color: #777
+      a
+        margin-left: 10px
+        .highlight
+          background-color: #ffc
+          font-weight: bold
 
 .pagination
   text-align: left
