Allowing iframes inside comments

--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -95,3 +95,6 @@ textarea.placeholder, input.placeholder
       border: 1px solid #dddddd
     th
       font-weight: bold
+  iframe
+    width: 100%
+    clear: both
