Fold/unfold tasks in place.
You can now open a task inline and comment on it.
It works on All Tasks and on TaskList#index.
It uses task fragment with css to hide the header.

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -85,6 +85,9 @@ form.new_task, form.edit_task, .task_list_form
 
 .task_list_container
   margin: 10px 0 20px
+  .task
+    .title
+      display: none
 
 .task_list_container.reordering
   th
