Filter tasks by typing. Can be combined with person and date filters.

--- a/app/views/task_lists/_filter.haml
+++ b/app/views/task_lists/_filter.haml
@@ -1,4 +1,7 @@
 .filter_box
+  %p= t('task_lists.filter.by_name')
+  %input#filter_tasks_by_name{ :type => 'search' }
+
   %p= t('task_lists.filter.assigned_to')
   = filter_assigned_dropdown(project)
 
