Task classes refactoring. Commenting on an expanded task now updates the status and user of the task
We're now sending X-JSON headers with the task info on Task#update,
and using it to update the .task element with the right person and status

--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -20,6 +20,8 @@ div.column_wrap
   div.column
     background: rgb(255, 255, 255)
     padding: 10px
+    select
+      max-width: 280px
     div.active
       +rounded(5px)
       background: $navbar
