--- a/app/views/tasks/_task.m.haml
+++ b/app/views/tasks/_task.m.haml
@@ -1,10 +1,10 @@
 - task_list ||= task.task_list
 - project ||= task.task_list.project
-.task{ :class => task_classes(task)}
+.task{ :class => task_classes(task) }
   .inner
-    .taskStatus	
+    .taskStatus
       = task_status(task,:content)
-    .taskName{ :class => "task_item_#{task.status_name}"}
+    .taskName
       %span.status= localized_status_name(task)
       = link_to h(task), project_task_list_task_path(project,task_list,task), :class => :name
       - unless (task.due_on.nil? && task.unassigned?) || task.closed?
