--- a/app/views/activities/show.frag.haml
+++ b/app/views/activities/show.frag.haml
@@ -13,4 +13,4 @@
 - if current_user.projects.any?
   #activities
     = list_threads(@threads)
-    = show_more_button(@activities)
+    = show_more_button
