Refactoring JS for tasks into tasks_overview.js and tasks_inline.js

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -133,6 +133,14 @@ form.new_task, form.edit_task, .task_list_form
     padding:
       top: 4px
       bottom: 2px
+    .expanded_actions
+      display: inline
+      float: right
+      a
+        font-weight: normal
+        text-decoration: underline
+        font-size: 10px
+        margin-left: 4px
     .task_drag
       display: none
       cursor: move
