--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -7,6 +7,9 @@
     = image_tag('drag.png', :class => 'task_drag') if editable and !task.archived?
     = task_status(task, :content)
   .taskName
+    .expanded_actions{ :style => 'display: none' }
+      %a.full{ :href => project_task_list_task_path(project, task_list, task) } Full view
+      %a.hide{ :href => '#' } Hide comments
     = link_to h(task), [project, task_list, task], :class => 'name'
     - unless (task.due_on.nil? && task.unassigned?) || task.closed?
       - if task.due_on
