--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -11,7 +11,7 @@
       %a.full{ :href => project_task_list_task_path(project, task_list, task) } Full view
       %a.hide{ :href => '#' } Hide comments
     = link_to h(task), [project, task_list, task], :class => 'name'
-    - unless (task.due_on.nil? && task.unassigned?) || task.closed?
+    - unless task.closed?
       - if task.due_on
         %span.assigned_date= due_on(task)
       - if task.assigned
