--- a/app/views/activities/_create_task.m.haml
+++ b/app/views/activities/_create_task.m.haml
@@ -3,7 +3,7 @@
   .container
     %span.user=h activity.user.short_name
     = t(".#{activity.action_type}")
-    = link_to h(task), project_task_list_task_path(task.project, task.task_list, task)
+    = link_to h(task), project_task_path(task.project, task)
     = activity_project_link(activity.project)
     .date
       = posted_date activity.posted_date
