--- a/app/views/emailer/_recent_tasks.text.html.haml
+++ b/app/views/emailer/_recent_tasks.text.html.haml
@@ -3,7 +3,7 @@
     = t('emailer.notify.my_tasks', :project => h(project.name))
   - for task in recent_tasks
     %p{ :style => email_text(:small) }
-      = link_to h(task.name), project_task_list_task_url(project, task.task_list, task), :style => 'color: rgb(50,50,50);padding-left:15px'
+      = link_to h(task.name), project_task_url(project, task), :style => 'color: rgb(50,50,50);padding-left:15px'
       %span
         = localized_status_name(task)
         - if task.due_on
