--- a/app/views/emailer/notify_task.text.html.haml
+++ b/app/views/emailer/notify_task.text.html.haml
@@ -11,7 +11,7 @@
   .box{ :style => email_box(@task) }
     %h2{ :style => email_text(:big) }
       = t('emailer.notify.task')
-      = link_to h(@task.name), project_task_list_task_url(@project, @task_list, @task)
+      = link_to h(@task.name), project_task_url(@project, @task)
     - if @task.assigned
       %p= t('emailer.notify.assigned_to', :user => h(@task.assigned.user.name))
     %p= t('emailer.notify.status', :status => localized_status_name(@task))
@@ -22,7 +22,7 @@
   = emailer_recent_tasks(@project, @recipient)
 
   .actions{ :style => 'font-size: 14px; color: rgb(100,100,100); padding: 15px' }
-    %p= t('emailer.notify.view_online', :link => project_task_list_task_url(@project, @task_list, @task))
+    %p= t('emailer.notify.view_online', :link => project_task_url(@project, @task))
     = emailer_answer_to_this_email
 
   .footer{ :style => email_text(:small) }
@@ -31,5 +31,5 @@
       = t('emailer.notify.are_watching')
     = emailer_commands_for_tasks(@recipient)
     %p
-      = t('emailer.notify.stop_watching', :stop_watching_url => project_task_list_task_url(@project, @task_list, @task))
+      = t('emailer.notify.stop_watching', :stop_watching_url => project_task_url(@project, @task))
       = t('emailer.notify.notification_settings', :url => account_notifications_url)
