--- a/app/views/public/projects/show.haml
+++ b/app/views/public/projects/show.haml
@@ -38,7 +38,7 @@
     %p.task_list
       %b= link_to(h(task_list), project_task_list_path(@project, task_list)) + ":"
       - tasks = task_list.tasks.all(:select => 'id, name', :order => 'id desc', :limit => 5)
-      - tasks = tasks.collect { |task| link_to h(task), project_task_list_task_path(@project, task_list, task) }
+      - tasks = tasks.collect { |task| link_to h(task), project_task_path(@project, task) }
       = tasks.join(", ") + (tasks.size == 5 ? ", ..." : "")
   
 
