--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -29,7 +29,7 @@
           &rarr;
           = link_to result.task_list, project_task_list_path(result.project, result.task_list)
           &rarr;
-          = link_to result.name, project_task_list_task_path(result.project, result.task_list, result)
+          = link_to result.name, project_task_path(result.project, result)
           %span.time= time_ago_in_words result.updated_at
         - when Page
           .page_icon
