--- a/app/views/tasks/_my_tasks_listing.haml
+++ b/app/views/tasks/_my_tasks_listing.haml
@@ -8,4 +8,4 @@
         .loading_icon{ :style => 'display: none' }
         .left_arrow_icon
         = render_due_on(task,current_user)
-        = link_to task, project_task_list_task_path(task.project_id, task.task_list_id, task), :class => :name
+        = link_to task, project_task_path(task.project_id, task), :class => :name
