--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -8,9 +8,9 @@
     = task_status(task, :content)
   .taskName
     .expanded_actions{ :style => 'display: none' }
-      %a.full{ :href => project_task_list_task_path(project, task_list, task) } Full view
+      %a.full{ :href => project_task_path(project, task) } Full view
       %a.hide{ :href => '#' } Hide comments
-    = link_to h(task), [project, task_list, task], :class => 'name'
+    = link_to h(task), [project, task], :class => :name
     - unless task.closed?
       - if task.due_on
         %span.assigned_date= due_on(task)
