--- a/app/views/tasks/_task.m.haml
+++ b/app/views/tasks/_task.m.haml
@@ -6,7 +6,7 @@
       = task_status(task,:content)
     .taskName
       %span.status= localized_status_name(task)
-      = link_to h(task), project_task_list_task_path(project,task_list,task), :class => :name
+      = link_to h(task), project_task_path(project, task), :class => :name
       - unless (task.due_on.nil? && task.unassigned?) || task.closed?
         %span.assigned
           = due_on(task) if task.due_on
