--- a/app/views/tasks/_task_sidebar.haml
+++ b/app/views/tasks/_task_sidebar.haml
@@ -1,5 +1,5 @@
 .task{ :class => task_classes(task) }
   %span.taskStatus
-    = task_status(task,:content)
-  = render_due_on(task,current_user)
-  = link_to h(task.name), project_task_list_task_path(task.project,task.task_list,task), :class => "name"
+    = task_status(task, :content)
+  = render_due_on(task, current_user)
+  = link_to h(task.name), project_task_path(task.project, task), :class => "name"
